# pythonnet

./: .bumpversion.cfg  .editorconfig  .git-blame-ignore-revs  .gitignore  .mention-bot  .travis.yml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Directory.Build.props  Justfile  LICENSE  MANIFEST.in  NuGet.config  Python.NET.ipynb  Python.Runtime.dll.config  Python.Test.csproj  README.md  README.rst  appveyor.yml  clr.py  monopythonnet.mds  net_test.py  pyproject.toml  pythonnet.15.sln  pythonnet.build  pythonnet.sln  pythonnet_8.sln  pythonnet_9.sln  requirements.txt  setup.cfg  setup.py  shell.nix  test_subclass.py  tox.ini  version.txt
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
Editor/: Editor.csproj  Output.cs  Program.cs  RichTextBoxStreamWriter.cs
Python.Loader/: Loader.cs  Python.Loader.csproj
Python.Runtime/: AssemblyInfo.cs  CustomMarshaler.cs  Python.Runtime.csproj  arrayobject.cs  classobject.cs  codegenerator.cs  converter.cs  eventbinding.cs  exceptions.cs  extensiontype.cs  generictype.cs  genericutil.cs  importhook.cs  indexer.cs  interfaceobject.cs  interfaces.cs  interop.cs  interop35.cs  managedtype.cs  metatype.cs  methodbinder.cs  methodbinding.cs  methodwrapper.cs  moduleobject.cs  nativecall.cs  propertyobject.cs  pyansistring.cs  pydict.cs  pyint.cs  pylist.cs  pyobject.cs  pysequence.cs  pythonengine.cs  pythonexception.cs  runtime.cs  runtime_.cs  runtime_.tt  typemanager.cs
Python.Runtime.Interfaces/: ILibPython.cs
Python.Runtime.Native/: AssemblyInfo.cs  CustomMarshaler.cs  ILibPython.cs  LibPythonPInvoke.cs  LibPythonPInvoke.cs.dontcompile  LibPythonPInvoke_.cs  LibPythonPInvoke_.tt  Python.Runtime.Native.csproj
Python.Test.Embed/: Program.cs  Python.Test.Embed.csproj  TestCallbacks.cs  TestConverter.cs  TestDomainReload.cs  TestPyLong.cs  TestPyScope.cs  TestPythonEngineProperties.cs  TestRuntime.cs  pyimport.cs
Python.Test.Helper/: Python.Test.Helper.csproj  ReprTest.cs  arraytest.cs  conversiontest.cs  delegatetest.cs  doctest.cs  exceptiontest.cs  indexertest.cs  mp_lengthtest.cs  propertytest.cs
Python.Test.Performance/: BaselineComparisonConfig.cs  BenchmarkTests.cs  Python.Test.Performance.csproj  PythonCallingNetBenchmark.cs
ci/: appveyor_build_recipe.ps1  appveyor_run_tests.ps1  install.ps1  install_miniconda.ps1  run_with_env.cmd
conda.recipe/: README.md  bld.bat  meta.yaml
demo/: DynamicGrid.py  DynamicGrid.xaml  helloform.py  splitter.py  wordpad.py
doc/: .gitignore  Doxyfile  Python.Runtime.dll.config  TODO.txt  changes.txt  requirements.txt
hotReloadCrashRepro/: Program.cs  README.txt  hotReloadCrashRepro.csproj  theAssembly.cs
htdocs/: index.html  readme.html
pythonnet/: .gitignore  Makefile  VS_README.txt  __init__.py  makefile  makefile.mono  monopythonnet.userprefs  pythonnet.build  pythonnet.sln  pythonnet25.sln  pythonnet_9.sln  setup.py  setupegg.py  setupmono.py  setupwin.py
src/: SharedAssemblyInfo.cs  clrmodule.csproj
tests/: _missing_import.py  conftest.py  importtest.py  leaktest.py  profile.py  runtests.py  stress.py  stresstest.py  test_array.py  test_attributes.py  test_callback.py  test_class.py  test_clrmethod.py  test_codec.py  test_collection_mixins.py  (+31 more)
(+787 files in other folders)
